Styling changes and work on landing page

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,30 +1,36 @@
 @import "base";
 
+/* Positioning */
+/* Box-model */
+/* Typography */
+/* Visual */
+/* Misc */
+
 .footer {
-  width: 100%;
   left: 0;
   right: 0;
   bottom: 0;
-  max-width: 1200px;
+  width: 100%;
+  // max-width: 1200px;
   margin: 0 auto;
-  text-align: center;
-  color: $color-lightred;
-  background: $color-darkpurple;
   padding: 3vh;
-  border-top: 0.5px solid $color-white;
+  border-top: 0.5px solid $color-light;
+  text-align: center;
+  color: $color-light;
+  background: $color-main;
   p {
     margin: 0;
   }
 }
 
 .socialMedia {
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
+  margin: 0;
+  padding: 0;
   li {
-    list-style: none;
     margin: 1vh 1.5vw;
+    list-style: none;
   }
   img {
     height: 25px;
