--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -1,7 +1,7 @@
 @import "../components/base";
 
 .content-section {
-  background-color: $color-white;
+  background-color: $color-light;
   height: 100%;
   padding: 2rem;
 
