--- a/src/components/base.scss
+++ b/src/components/base.scss
@@ -1,9 +1,16 @@
 $break-small: 400px;
 $break-large: 750px;
 
+// First version of site
+// $color-lightred: #ebaca2;
+// $color-lightgreen: #bed3c3;
+// $color-turquoise: #4a919e;
+// $color-darkpurple: #212e53;
+// $color-white: #f9f9f9;
+
+// Second version of site
+$color-main: #111c33;
+$color-secondary: #101827;
+$color-contrast: #2d70ff;
+$color-light: #ffffff;
 $color-darkred: #ce6a6b;
-$color-lightred: #ebaca2;
-$color-lightgreen: #bed3c3;
-$color-turquoise: #4a919e;
-$color-darkpurple: #212e53;
-$color-white: #f9f9f9;
