--- a/src/components/contentHeader.module.scss
+++ b/src/components/contentHeader.module.scss
@@ -1,34 +1,37 @@
 @import "base";
 
+/* Positioning */
+/* Box-model */
+/* Typography */
+/* Visual */
+/* Misc */
+
 .header {
-  margin-top: 2vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2vh;
 }
 
 .title,
 .paragraph {
-  color: $color-white;
   display: inline-block;
   text-align: center;
+  color: $color-light;
 }
 .title {
-  font-size: 1.4rem;
   margin-bottom: 0.5vh;
+  font-size: 1.4rem;
 }
 .paragraph {
+  margin: 0 0 5vh 0;
+  padding: 0;
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.4rem;
-  margin: 0 0 5vh 0;
-  padding: 0;
-  // border-bottom: 1px solid $color-turquoise;
 }
 
 @media screen and (min-width: $break-small) {
-
-
   .title {
     font-size: 2rem;
   }
