--- a/src/components/pager.module.scss
+++ b/src/components/pager.module.scss
@@ -1,5 +1,11 @@
 @import "base";
 
+/* Positioning */
+/* Box-model */
+/* Typography */
+/* Visual */
+/* Misc */
+
 .container {
   display: flex;
   justify-content: center;
@@ -7,14 +13,14 @@
 
 .span {
   a {
-    color: $color-white;
-    font-size: 1.1rem;
+    color: $color-light;
     margin: 0 0.9rem;
+    font-size: 1.1rem;
     text-decoration: none;
     font-style: italic;
   }
 
   a:hover {
-    color: $color-lightred;
+    color: $color-contrast;
   }
 }
