--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -1,16 +1,14 @@
 @import "../components/base";
 
 .form {
-  align-items: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-
   button {
     height: 2rem;
-    background-color: $color-turquoise;
+    background-color: $color-contrast;
   }
-
   input,
   textarea,
   button {
@@ -18,21 +16,19 @@
     border: none;
     margin-bottom: 1rem;
   }
-
   input {
     height: 2rem;
     width: 15rem;
-    padding: .5rem;
+    padding: 0.5rem;
     text-align: center;
   }
-
   textarea {
     height: auto;
-    min-height: 10rem;
     width: 15rem;
+    min-height: 10rem;
   }
 }
 
 .p {
-  color: $color-lightred;
+  color: $color-contrast;
 }
