--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,58 +1,54 @@
 @import "../components/base";
 
-.section {
-  margin-bottom: 4vh;
+.greeting-section {
   margin-top: 3vh;
+  margin-bottom: 4vh;
   padding: 0 7.5vw;
+  height: 100%;
   h1,
   p {
-    color: $color-white;
+    color: $color-light;
   }
   h1 {
-    font-size: 1.8rem;
     margin-bottom: 3vh;
+    font-size: 1.8rem;
   }
   p {
+    margin-bottom: 2vh;
     font-size: 1.1rem;
     font-weight: 500;
     line-height: 1.8rem;
-    margin-bottom: 2vh;
   }
-
   .blinking {
-    animation: blinkingText 1s infinite;
     font-size: 1.9rem;
     font-weight: 100;
-    color: $color-white;
+    color: $color-light;
+    animation: blinkingText 1s infinite;
   }
-
   .user-answer {
-    color: $color-white;
-    background: $color-darkpurple;
-    outline: none;
-    border: none;
-    width: 100%;
     height: 100%;
-    font-size: 32px;
-    font-style: italic;
-  }
-
-  .submit {
-    border-radius: 4px;
+    width: 100%;
     border: none;
+    color: $color-light;
+    font-size: 32px;
+    outline: none;
+    background: $color-main;
+  }
+  .submit {
     margin-bottom: 1rem;
     height: 2rem;
-    background-color: $color-turquoise;
+    border: none;
+    border-radius: 4px;
+    background-color: $color-contrast;
     a {
-      color: $color-white;
-      text-decoration: none;
       padding: 5px;
+      color: $color-light;
+      text-decoration: none;
     }
     a:visited {
       text-decoration: none;
     }
   }
-
   .button-placeholder {
     margin-bottom: 1rem;
     height: 2rem;
@@ -61,28 +57,40 @@
   @media only screen and (min-width: $break-small) {
     padding: 0 5vw;
     margin-top: 5vh;
-
     h1 {
-      font-size: 3rem;
+      font-size: 2.7rem;
     }
-    p {
-      font-size: 2rem;
-      line-height: 3rem;
+    p,
+    .user-answer {
+      font-size: 1.8rem;
+      line-height: 2.5rem;
+    }
+    .user-answer {
+      color: $color-contrast;
     }
     .blinking {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
   }
 
   @keyframes blinkingText {
     0% {
-      color: $color-white;
+      color: $color-light;
     }
     50% {
       color: transparent;
     }
     100% {
-      color: $color-white;
+      color: $color-light;
     }
   }
+}
+
+.arrow {
+  border: solid $color-light;
+  border-width: 0 3px 3px 0;
+  padding: 10px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  margin: 0 auto;
 }
