--- a/src/pages/success.scss
+++ b/src/pages/success.scss
@@ -20,19 +20,19 @@
 
 .modal {
   position: relative;
-  height: 30vh;
-  color: $color-white;
-  background: $color-lightred;
-  background-clip: padding-box;
-  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
-  margin: 0 auto;
-  border-radius: 8px;
-  outline: none;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  margin: 0 auto;
   padding: 2rem;
+  height: 30vh;
+  border-radius: 8px;
+  font-size: 20px;
+  color: $color-light;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
+  background: $color-contrast;
+  background-clip: padding-box;
+  outline: none;
 }
 
 .modal::-webkit-scrollbar {
