--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -1,31 +1,30 @@
 @import "../components/base";
 
 .posts {
-  padding: 0;
-  list-style-type: none;
-  margin: 0 0 2rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0;
+  margin: 0 0 2rem 0;
+  list-style-type: none;
 }
 
 .post {
   margin-top: 2rem;
   width: 100%;
   a {
-    background: $color-lightgreen;
-    opacity: 1;
-    color: $color-white;
-    display: block;
-    padding: 1rem;
-    height: 132px;
-    text-decoration: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem;
+    height: 132px;
+    color: $color-light;
+    text-decoration: none;
+    opacity: 1;
+    background: $color-secondary;
   }
   a:hover {
-    background: $color-lightred;
+    background: $color-contrast;
   }
 
   .aside {
@@ -35,11 +34,11 @@
   }
   h2 {
     padding: 0 4vw 0 0;
-    font-size: 1rem;
     margin-bottom: 0;
+    font-size: 1rem;
   }
   p {
-    color: $color-darkpurple;
+    color: $color-main;
     font-size: 0.7rem;
     font-style: italic;
   }
