--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -21,7 +21,7 @@
     color: $color-light;
     text-decoration: none;
     opacity: 1;
-    background: $color-secondary;
+    background: lightgrey;
   }
   a:hover {
     background: $color-contrast;
