--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -23,7 +23,6 @@
   align-items: space-between;
   margin: 0 auto;
   min-height: 100vh;
-  // max-width: 1200px;
   background-color: $color-main;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -46,7 +45,7 @@
   flex-direction: column;
   justify-content: flex-start;
   flex: 1;
-  padding: 2rem;
+  padding: 0;
   height: auto;
   opacity: 1;
 }
