--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -4,7 +4,7 @@
   margin-top: 3vh;
   margin-bottom: 4vh;
   padding: 0 7.5vw;
-  height: 100%;
+  height: 60vh;
   h1,
   p {
     color: $color-light;
@@ -25,44 +25,15 @@
     color: $color-light;
     animation: blinkingText 1s infinite;
   }
-  .user-answer {
-    visibility: hidden;
-    height: 100%;
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid $color-light;
-    font-size: 32px;
-    outline: none;
-    background: $color-main;
-    color: $color-contrast;
-  }
+
   .active {
     visibility: visible;
   }
 
-  .submit {
-    margin-bottom: 1rem;
-    height: 2rem;
-    border: none;
-    border-radius: 4px;
-    background-color: $color-contrast;
-    a {
-      padding: 5px;
-      color: $color-light;
-      text-decoration: none;
-    }
-    a:visited {
-      text-decoration: none;
-    }
-  }
-  .button-placeholder {
-    margin-bottom: 1rem;
-    height: 2rem;
-  }
-
   @media only screen and (min-width: $break-small) {
-    padding: 0 5vw;
+    padding: 15vh 5vw;
     margin-top: 5vh;
+    height: 70vh;
     h1 {
       font-size: 2.7rem;
     }
@@ -97,4 +68,19 @@
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   margin: 0 auto;
+}
+
+.information-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-evenly;
+  margin-top: 4vh;
+  height: auto;
+  background-color: $color-contrast;
+  @media only screen and (min-width: $break-small) {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
