--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -4,7 +4,7 @@
   margin-top: 3vh;
   margin-bottom: 4vh;
   padding: 0 7.5vw;
-  height: 60vh;
+  height: 55vh;
   h1,
   p {
     color: $color-light;
@@ -74,13 +74,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: space-evenly;
+  align-items: center;
   margin-top: 4vh;
   height: auto;
-  background-color: $color-contrast;
-  @media only screen and (min-width: $break-small) {
+  background-color: $color-secondary;
+  @media only screen and (min-width: $break-large) {
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-items: space-evenly;
   }
 }
