--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -12,6 +12,7 @@
 .post {
   margin-top: 2rem;
   width: 100%;
+  border: 1px solid $color-light;
   a {
     display: flex;
     justify-content: space-between;
@@ -21,12 +22,11 @@
     color: $color-light;
     text-decoration: none;
     opacity: 1;
-    background: lightgrey;
+    transition: all 1s ease;
   }
   a:hover {
     background: $color-contrast;
   }
-
   .aside {
     display: flex;
     flex-direction: column;
@@ -38,11 +38,10 @@
     font-size: 1rem;
   }
   p {
-    color: $color-main;
+    color: $color-light;
     font-size: 0.7rem;
     font-style: italic;
   }
-
   @media screen and (min-width: $break-small) {
     width: 80%;
     margin-top: 0.9rem 0;
