--- a/src/components/informationCard.module.scss
+++ b/src/components/informationCard.module.scss
@@ -8,6 +8,7 @@
     padding: 0;
     margin: 0;
     font-size: 1.5rem;
+    letter-spacing: 5px;
     a {
       text-decoration: none;
       color: $color-light;
@@ -16,8 +17,10 @@
   .paragraph {
     padding: 0;
     margin: 0;
-    font-weight: 200;
-    font-size: 1.1rem;
+    font-weight: 100;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    letter-spacing: 1px;
     color: $color-light;
   }
   @media only screen and (min-width: $break-small) {
