--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -27,6 +27,9 @@
   a:hover {
     background: $color-contrast;
   }
+  &:first-child {
+    margin: 0;
+  }
   .aside {
     display: flex;
     flex-direction: column;
@@ -43,7 +46,7 @@
     font-style: italic;
   }
   @media screen and (min-width: $break-small) {
-    width: 80%;
+    width: 50%;
     margin-top: 0.9rem 0;
   }
   h2 {
