--- a/src/components/vizSensorCard.module.scss
+++ b/src/components/vizSensorCard.module.scss
@@ -5,9 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  height: 70vh;
-  padding: 0 4vw;
+  height: 450px;
   color: $color-light;
   font-weight: 200;
   opacity: 0.2;
@@ -16,9 +14,18 @@
     position: absolute;
     width: 300px;
     height: 200px;
+    h1 {
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+    }
     p {
+      padding: 0;
+      margin: 0;
+      margin-bottom: 1rem;
       font-weight: 100;
-      font-size: 1.15rem;
+      font-size: 1rem;
+      line-height: 1.5rem;
+      letter-spacing: 1.2px;
     }
     a {
       color: $color-contrast;
