--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -1,8 +1,7 @@
-@import "../components/base";
+@import "../styles/index.scss";
 
 .link {
   width: auto;
   margin: 0 auto;
   text-decoration: none;
-  color: $color-light;
 }
