--- a/src/pages/me.module.scss
+++ b/src/pages/me.module.scss
@@ -1,4 +1,4 @@
-@import "../components/base";
+@import "../styles/index.scss";
 
 .content {
   display: flex;
@@ -8,8 +8,6 @@
   align-self: center;
   margin: 0 0 2rem;
   padding-bottom: 1vh;
-  border-bottom: 1px solid $color-contrast;
-  color: $color-light;
   font-size: 1.4rem;
   @media screen and (min-width: $break-small) {
     font-size: 1.8rem;
