--- a/src/components/contentHeader.module.scss
+++ b/src/components/contentHeader.module.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import "../styles/index.scss";
 
 /* Positioning */
 /* Box-model */
@@ -24,7 +24,7 @@
   font-size: 1.4rem;
 }
 .paragraph {
-  margin: 0 0 5vh 0;
+  margin: 0 0 3vh 0;
   padding: 0;
   font-weight: 100;
   font-size: 1rem;
