--- a/src/components/informationCard.module.scss
+++ b/src/components/informationCard.module.scss
@@ -1,9 +1,13 @@
-@import "base";
+@import "../styles/index.scss";
 
 .container {
   padding: 2rem;
   width: auto;
   height: auto;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   .title {
     padding: 0;
     margin: 0;
@@ -17,14 +21,21 @@
   .paragraph {
     padding: 0;
     margin: 0;
+    margin-bottom: 3rem;
     font-weight: 100;
     font-size: 1rem;
     line-height: 1.5rem;
     letter-spacing: 1.2px;
     color: $color-light;
   }
+
   @media only screen and (min-width: $break-small) {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+    img {
+      width: 400px;
+      height: 400px;
+      border: 1px solid $color-light;
+    }
   }
 }
