--- a/src/components/portfolio.module.scss
+++ b/src/components/portfolio.module.scss
@@ -1,46 +1,13 @@
-@import "base";
-
-/* Positioning */
-/* Box-model */
-/* Typography */
-/* Visual */
-/* Misc */
+@import "../styles/index.scss";
 
 .section {
-  display: grid;
-  justify-items: center;
-  grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-  .container {
-    position: relative;
-    display: grid;
-    width: 250px;
-    border-radius: 5px;
-    color: white;
-    text-align: center;
-    opacity: 0.6;
-    &:hover {
-      opacity: 1;
-      cursor: pointer;
-      .paragraph {
-        opacity: 1;
-      }
-    }
-  }
-  .image {
-    width: 100%;
-  }
-
-  .paragraph {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: 0;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    color: $color-light;
-    z-index: 1;
-    opacity: 0;
-    transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  @media only screen and (min-width: $break-large) {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
   }
 }
