--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -1,4 +1,4 @@
-@import "../components/base";
+@import "../styles/index.scss";
 
 .form {
   display: flex;
@@ -6,9 +6,12 @@
   align-items: center;
   justify-content: center;
   button {
-    height: 2rem;
+    margin-top: 2.5rem;
+    height: 3rem;
+    width: 15rem;
     background-color: $color-contrast;
   }
+
   input,
   textarea,
   button {
@@ -17,7 +20,7 @@
     margin-bottom: 1rem;
   }
   input {
-    height: 2rem;
+    height: 2.5rem;
     width: 15rem;
     padding: 0.5rem;
     text-align: center;
@@ -26,9 +29,11 @@
     height: auto;
     width: 15rem;
     min-height: 10rem;
+    margin: 0;
+    margin-bottom: 1rem;
   }
 }
 
 .p {
-  color: $color-contrast;
+  font-size: 1.1rem;
 }
