--- a/src/templates/readingList.module.scss
+++ b/src/templates/readingList.module.scss
@@ -1,4 +1,4 @@
-@import "../components/base";
+@import "../styles/index.scss";
 
 .posts {
   display: flex;
@@ -13,22 +13,21 @@
   margin-top: 2rem;
   width: 100%;
   border: 1px solid $color-light;
+  &:first-child {
+    margin: 0;
+  }
   a {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
     height: 132px;
-    color: $color-light;
     text-decoration: none;
     opacity: 1;
     transition: all 1s ease;
   }
   a:hover {
     background: $color-contrast;
-  }
-  &:first-child {
-    margin: 0;
   }
   .aside {
     display: flex;
@@ -38,33 +37,25 @@
   h2 {
     padding: 0 4vw 0 0;
     margin-bottom: 0;
+    font-size: 1.2rem;
+  }
+  p {
+    font-style: italic;
     font-size: 1rem;
   }
-  p {
-    color: $color-light;
-    font-size: 0.7rem;
-    font-style: italic;
-  }
-
   @media screen and (min-width: $break-small) {
     width: 50%;
-    margin-top: 0.9rem 0;
-  }
-  h2 {
-    font-size: 1.5rem;
-  }
-  p {
-    font-size: 0.8rem;
   }
 }
 
 .imageWrapper {
-  width: 100px;
-  min-height: 50px;
-  max-height: 90px;
+  width: 110px;
+  height: 110px;
   overflow: hidden;
 }
 
 .image {
-  min-height: 100px;
+  height: 110px;
+  width: auto;
+  object-fit: contain;
 }
