--- a/src/components/portfolio.module.scss
+++ b/src/components/portfolio.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: space-between;
   @media only screen and (min-width: $break-large) {
     flex-direction: row;
     justify-content: space-evenly;
