--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,11 +10,13 @@ $color-darkred: #ce6a6b;
 html {
   box-sizing: border-box;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
