styling fix and useEffect to avoid multiple type outs

--- a/src/components/informationCard.module.scss
+++ b/src/components/informationCard.module.scss
@@ -4,10 +4,10 @@
   a {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     height: 100%;
   }
-  padding: 2rem;
+  padding: 1.5rem;
   width: auto;
   height: auto;
   display: flex;
