Fix smoothscroll issue

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -63,6 +63,8 @@
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   margin: 0 auto;
+  background: none;
+  outline: none;
 }
 
 .information-section {
