--- a/src/components/vizSensorCard.module.scss
+++ b/src/components/vizSensorCard.module.scss
@@ -1,18 +1,19 @@
 @import "../styles/index.scss";
 
 .div-container {
+  width: 100%;
+  grid-column: span 2;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 450px;
   font-weight: 200;
   opacity: 0.2;
   transition: opacity 1s linear;
   .content {
-    position: absolute;
+    position: relative;
+    padding: 16px 0;
     width: 300px;
-    height: 200px;
     h1 {
       font-size: 1.5rem;
       letter-spacing: 2px;
@@ -29,13 +30,14 @@
     a {
       text-decoration: none;
     }
-    @media screen and (min-width: $break-small) {
+    @media screen and (min-width: $break-large) {
       width: 400px;
-      height: 30vh;
+    }
+    @media screen and (min-width: $break-largest) {
+      width: 400px;
     }
   }
-  @media screen and (min-width: $break-small) {
-    height: 40vh;
+  @media screen and (min-width: $break-largest) {
     p {
       line-height: 1.5rem;
       letter-spacing: 0.02rem;
@@ -44,27 +46,26 @@
 }
 
 .div-container:nth-child(odd) {
-  @media screen and (min-width: $break-small) {
-    left: 10;
-    padding-right: 1px;
-    align-self: flex-end;
-    width: 50%;
+  @media screen and (min-width: $break-largest) {
+    width: 100%;
+    margin-left: -0.5px;
     border-left: 1px solid $color-contrast;
     .circle {
-      left: -1vh;
+      left: -11px;
     }
   }
 }
 
 .div-container:nth-child(even) {
-  @media screen and (min-width: $break-small) {
+  @media screen and (min-width: $break-largest) {
     border-right: 1px solid $color-contrast;
-    padding-right: -1px;
-    width: calc(50% + 1px);
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
     .circle {
       left: calc(100% - 6px);
-      @media screen and (min-width: $break-small) {
-        left: calc(100% - 7px);
+      @media screen and (min-width: $break-largest) {
+        left: calc(100% - 9px);
       }
     }
     .content {
@@ -89,6 +90,10 @@
 
 .show {
   opacity: 1;
+}
+
+.even {
+  justify-self: end;
 }
 
 .circle:nth-child(even) {
