--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -4,9 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0;
+  padding: 0 16px;
   margin: 0 0 2rem 0;
   list-style-type: none;
+  width: 80%;
+  @media screen and (min-width: $break-small) {
+    width: 100%;
+  }
 }
 
 .post {
@@ -43,12 +47,14 @@
     font-style: italic;
     font-size: 1rem;
   }
-  @media screen and (min-width: $break-small) {
+  @media screen and (min-width: $break-large) {
     width: 50%;
   }
 }
 
 .imageWrapper {
+  display: flex;
+  align-items: center;
   width: 110px;
   height: 110px;
   overflow: hidden;
